--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SkiWings
+spring.datasource.username=postgres
+spring.datasource.password=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
