cambiate pagine di login.html aggiungendo anche form di registrazione, manca ancora da implementare controller, service, repository e mapper per la registrazione

--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.skywings</groupId>
 	<artifactId>SkyWings</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cheap_airline</name>
+	<name>SkyWings</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -73,6 +73,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
 	</dependencies>
