--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.application.name=cheap_airline
+spring.application.name=SkyWings
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/SkiWings
+spring.thymeleaf.cache=false
+spring.web.resources.chain.cache=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SkyWings
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.sql.init.mode=always
